# angler

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
conf.d/: angler.fish  fish-prompt.fish
functions/: _angler_ensure_daemon.fish  _angler_format_duration.fish  _angler_init.fish  _angler_install.fish  _angler_spawn_daemon.fish  _fp_ensure_daemon.fish  _fp_format_duration.fish  _fp_spawn_daemon.fish  fish_mode_prompt.fish  fish_prompt.fish  fish_right_prompt.fish
scripts/: release.sh
src/: main.rs
tests/: fish_render.fish  integration.rs
