[package]
name = "fish-prompt"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"

[[bin]]
name = "fish-prompt-daemon"
path = "src/main.rs"

[dependencies]
gix = { version = "0.83", default-features = false, features = ["status", "revision", "max-performance-safe", "sha1"] }
libc = "0.2"
notify = "8"
notify-debouncer-full = "0.6"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
