[package]
name = "fish-prompt"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"

[[bin]]
name = "fish-prompt-daemon"
path = "src/main.rs"

[dependencies]
gix = { version = "0.83", default-features = false, features = ["status", "revision", "max-performance-safe", "sha1"] }
humantime = "2"
libc = "0.2"
log = { version = "0.4", features = ["std"] }
notify = "8"
notify-debouncer-full = "0.7"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
